--- a/postgre-Slave.yml
+++ b/postgre-Slave.yml
@@ -20,6 +20,14 @@
     postgres_db_name: appdb
 
   tasks:
+    - name: Ensure postgres user exists
+      ansible.builtin.user:
+        name: postgres
+        shell: /bin/false
+        home: /var/lib/postgresql
+        system: yes
+        create_home: yes
+        
     - name: Install PostgreSQL 16 and PgBouncer
       apt:
         name:
