--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -25,6 +25,14 @@
     pgbouncer_max_client_conn: 1000
 
   tasks:
+    - name: Ensure postgres user exists
+      ansible.builtin.user:
+        name: postgres
+        shell: /bin/false
+        home: /var/lib/postgresql
+        system: yes
+        create_home: yes
+        
     - name: Install PostgreSQL 16 and PgBouncer
       apt:
         name:
