--- a/postgre-Master.yml
+++ b/postgre-Master.yml
@@ -2,7 +2,7 @@
 # Playbook 1: PostgreSQL 16 Master + PgBouncer (Ubuntu)
 
 - name: Deploy PostgreSQL 16 Master (production)
-  hosts: db_master
+  hosts: _master
   vars:
     postgres_version: 16
     postgres_port: 5432
@@ -25,14 +25,6 @@
     pgbouncer_max_client_conn: 1000
 
   tasks:
-    - name: Ensure postgres user exists
-      ansible.builtin.user:
-        name: postgres
-        shell: /bin/false
-        home: /var/lib/postgresql
-        system: yes
-        create_home: yes
-        
     - name: Install PostgreSQL 16 and PgBouncer
       apt:
         name:
